fixed header overlapping content

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -137,6 +137,10 @@ footer {
 }
 
 @media only screen and (max-width: 880px) {
+    body {
+        margin-top: 150px;
+    }
+    
     nav {
         display: grid;
         grid-template-rows: repeat(3, 1fr);
